# oneML-bootcamp

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  build.bat  build.sh  dependencies.html  folder.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  timestamp.txt
apps/: CMakeLists.txt  README.md
apps/android-camera/: .gitignore  CHANGELOG.md  README.md  build.gradle
apps/android-camera/app/: .gitignore  build.gradle
apps/android-camera/app/src/main/: AndroidManifest.xml
apps/android-camera/app/src/main/java/org/sertiscorp/oneml/onemlcamera/: CameraActivity.java  CameraConnectionFragment.java  DetectorActivity.java  LegacyCameraConnectionFragment.java
apps/android-camera/app/src/main/java/org/sertiscorp/oneml/onemlcamera/classifier/: SimilarityClassifier.java
apps/android-camera/app/src/main/java/org/sertiscorp/oneml/onemlcamera/customview/: AutoFitTextureView.java  OverlayView.java
apps/android-camera/app/src/main/java/org/sertiscorp/oneml/onemlcamera/env/: BorderedText.java  (+2 more)
apps/android-camera/app/src/main/res/layout/: image_edit_dialog.xml  tfe_od_activity_camera.xml  tfe_od_camera_connection_fragment_tracking.xml
apps/android-camera/app/src/main/res/values/: colors.xml  strings.xml
apps/android-simple/: .gitignore  CHANGELOG.md  README.md  build.gradle  settings.gradle
apps/android-simple/app/: .gitignore  build.gradle
apps/android-simple/app/src/androidTest/java/com/sertiscorp/oneml/onemlsimpleapp/: FaceDetectorTest.java  FaceIDTest.java
apps/android-simple/app/src/main/: AndroidManifest.xml
apps/android-simple/app/src/main/java/com/sertiscorp/oneml/onemlsimpleapp/: ImageUtils.java  MainActivity.java  OneMLApiFactory.java
apps/android-simple/app/src/main/res/layout/: activity_main.xml  content_main.xml
apps/android-simple/app/src/main/res/menu/: menu_main.xml
apps/android-simple/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/android-simple/app/src/main/res/values-night/: themes.xml
apps/cpp/: README.md  ekyc.cc  face_detector.cc  face_embedder.cc  face_id.cc  face_pad.cc  face_verification.cc  vehicle_detector.cc
apps/csharp/: EKYCApp.cs  FaceDetectorApp.cs  FaceEmbedderApp.cs  FaceIdApp.cs  FacePadApp.cs  FaceVerificationApp.cs  README.md  VehicleDetectorApp.cs
apps/golang/: .gitignore  README.md  ekyc.go  face_detector.go  face_embedder.go  face_id.go  face_pad.go  face_verification.go  go.mod  go.sum  utils_app.go  vehicle_detector.go
apps/golang/utility/: utility.go
apps/include/: apps_config.h.in
apps/java/: EKYCApp.java  FaceDetectorApp.java  FaceEmbedderApp.java  FaceIdApp.java  FacePadApp.java  FaceVerificationApp.java  README.md  VehicleDetectorApp.java
apps/java/android/: README.md
apps/python/: README.md  ekyc.py  face_detector.py  face_embedder.py  face_id.py  face_pad.py  face_verification.py  vehicle_detector.py
(+205 files in other folders)
